[package]
name = "websockets"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.38", features = ["full"] }
axum = {version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }



